logs/pyalsi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/cpuinfo'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/py_cpuinfo-3.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pyalsi'...
Compiling './lib/python3.5/site-packages/pyalsi/__init__.py'...
***   File "./lib/python3.5/site-packages/pyalsi/__init__.py", line 94
    print sys.argv
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyalsi/hardware'...
Listing './lib/python3.5/site-packages/pyalsi/hardware/cpu'...
Listing './lib/python3.5/site-packages/pyalsi/hardware/disks'...
Listing './lib/python3.5/site-packages/pyalsi/hardware/ram'...
Listing './lib/python3.5/site-packages/pyalsi/hardware/vga'...
Listing './lib/python3.5/site-packages/pyalsi/system'...
Listing './lib/python3.5/site-packages/pyalsi/tests'...
Listing './lib/python3.5/site-packages/pyalsi/tests/arch'...
Listing './lib/python3.5/site-packages/pyalsi/tests/common'...
Listing './lib/python3.5/site-packages/pyalsi/tests/debian'...
Listing './lib/python3.5/site-packages/pyalsi/tests/fedora'...
Listing './lib/python3.5/site-packages/pyalsi/tests/mock_classes'...
Listing './lib/python3.5/site-packages/pyalsi/tests/ubuntu'...
Listing './lib/python3.5/site-packages/pyalsi/tests/unit'...
Listing './lib/python3.5/site-packages/pyalsi/tests/unit/hardware'...
Listing './lib/python3.5/site-packages/pyalsi/tests/unit/utils'...
Listing './lib/python3.5/site-packages/pyalsi/utils'...
Listing './lib/python3.5/site-packages/pyalsi-0.4.5.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
